# NexusRefactor

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  fly.toml  pyproject.toml
docs/: ARCHITECTURE.md  DECISIONS.md  FLOWS.md  ROADMAP.md
eval/: __init__.py  bootstrap.py  metrics.py  run_eval.py
eval/golden/: README.md
eval/golden/example_account_rename/: gold_patch.diff  openapi_after.yaml  openapi_before.yaml  scenario.yaml
eval/golden/example_account_rename/code/: conftest.py  models.py  test_wallet.py  wallet.py
eval/golden/example_field_removed/: gold_patch.diff  openapi_after.yaml  openapi_before.yaml  scenario.yaml
eval/golden/example_field_removed/code/: conftest.py  models.py  producer.py  test_producer.py
eval/golden/example_multi_site/: gold_patch.diff  openapi_after.yaml  openapi_before.yaml  scenario.yaml
eval/golden/example_multi_site/code/: cart.py  conftest.py  models.py  pricing.py  test_store.py
eval/golden/example_rename_field/: gold_patch.diff  openapi_after.yaml  openapi_before.yaml  scenario.yaml
eval/golden/example_rename_field/code/: client.py  conftest.py  models.py  test_user.py
eval/golden/example_type_change/: gold_patch.diff  openapi_after.yaml  openapi_before.yaml  scenario.yaml
eval/golden/example_type_change/code/: conftest.py  invoice.py  models.py  test_invoice.py
scripts/: index_repo.py
src/nexus_refactor/: __init__.py  cli.py  config.py  github_app.py  graph.py  metrics_store.py  resolve.py  server.py  state.py
src/nexus_refactor/llm/: __init__.py  anthropic_provider.py  base.py  deepseek_provider.py  ollama_provider.py  openai_provider.py  router.py
src/nexus_refactor/nodes/: __init__.py  parse.py  refactor.py  search.py  verify.py
src/nexus_refactor/retrieval/: __init__.py  fusion.py  indexer.py  qdrant_store.py
src/nexus_refactor/sandbox/: __init__.py  denylist.py  runner.py
src/nexus_refactor/schema/: __init__.py  delta.py  openapi_diff.py
tests/: test_delta.py  test_fusion.py  test_indexer.py  test_metrics.py  test_metrics_store.py  test_openapi_diff.py  test_smoke.py
