[project]
name = "nexus-refactor"
version = "0.1.0"
description = "Schema-Drift Refactor Agent — a LangGraph agent that patches downstream code until the build is clean."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # --- Agent / graph ---
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langsmith>=0.1",          # tracing; activated via env vars, see .env.example
    # --- Retrieval ---
    "qdrant-client[fastembed]>=1.12",  # fastembed = local dense + sparse (BM25) embeddings, no API cost
    # --- LLM providers (router-ready: both wired from day one) ---
    "anthropic>=0.40",
    "openai>=1.50",
    # --- Schema / data ---
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    "pyyaml>=6.0",             # OpenAPI specs are YAML
    "httpx>=0.27",             # used by the sample downstream code (REST client)
    # --- Eval rigor ---
    "numpy>=1.26",
    "scipy>=1.13",             # bootstrapped confidence intervals
    # --- CLI / output ---
    "typer>=0.12",
    "rich>=13.0",
    # --- Service (Phase 2: the webhook deployment surface) ---
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
# Phase 2 (deployment). NOT installed by default — `uv sync --extra phase2` when you get there.
phase2 = [
    "locust>=2.31",
    "guardrails-ai>=0.5",
]
# Phase 3 (vLLM/QLoRA/Unsloth) is GPU-gated and intentionally NOT listed here —
# its heavy, platform-specific deps (torch, vllm, unsloth) belong on the GPU box.
# See docs/ROADMAP.md.

[project.scripts]
nexus = "nexus_refactor.cli:app"

[dependency-groups]
# Synced by default with `uv sync`. mypy is doubly important here: it is part of
# the *verify* signal (the Python analog of compiler exit codes). See docs/ARCHITECTURE.md.
dev = [
    "pytest>=8.0",
    "mypy>=1.11",
    "ruff>=0.6",
    "types-pyyaml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nexus_refactor"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "eval", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]  # errors, pyflakes, isort, pyupgrade, bugbear
ignore = ["E501"]                     # line length handled by formatter

[tool.mypy]
# Lenient on OUR source while it is full of stubs. The *strict* mypy that acts as the
# build gate is run against the sample repos inside the sandbox, not against this package.
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]  # so tests can import the top-level `eval` package (not installed like src)
addopts = "-ra"
markers = [
    "integration: tests that need Qdrant or an LLM API key (deselect with -m 'not integration')",
]
